[tool.poetry]
name = "pytestfabric"
version = "0.1.0"
description = ""
authors = ["Austin M. Reppert <austinmreppert@gmail.com>"]
readme = "README.md"
classifiers = [
    "Framework :: Pytest",
]

[tool.poetry.dependencies]
python = ">=3.11"
pytest = "^8.2.2"
nbformat = "^5.10.4"
ipython = "^8.26.0"
pyspark = "^3.4.0"
azure-storage-file-datalake = "^12.16.0"
azure-identity = "^1.17.1"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.pytest11]
pytestfabric = "pytestfabric.plugin"